Stopped using roboto thin because it's not very readable

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,7 +13,7 @@ body {
 
 body {
   position: relative;
-  font: 16px/20px "Roboto-Thin", "Helvetica Neue", Helvetica, sans-serif;
+  font: 16px/20px "Roboto-Medium", "Helvetica Neue", Helvetica, sans-serif;
   color: #93a1a1;
   background: #fdf6e3;
   padding-bottom: 80px;
@@ -28,7 +28,7 @@ input,
 button,
 textarea,
 select {
-  font: 16px/20px "Roboto-Thin", "Helvetica Neue", Helvetica, sans-serif;
+  font: 16px/20px "Roboto-Medium", "Helvetica Neue", Helvetica, sans-serif;
 }
 
 h1 {
