--- a/app/styles/roboto.css
+++ b/app/styles/roboto.css
@@ -1,28 +1,4 @@
 @font-face {
-    font-family: 'Roboto-Thin';
-    src: url('../font/Roboto-Thin-webfont.eot');
-    src: url('../font/Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/Roboto-Thin-webfont.woff') format('woff'),
-         url('../font/Roboto-Thin-webfont.ttf') format('truetype'),
-         url('../font/Roboto-Thin-webfont.svg#RobotoThin') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'Roboto-ThinItalic';
-    src: url('../font/Roboto-ThinItalic-webfont.eot');
-    src: url('../font/Roboto-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/Roboto-ThinItalic-webfont.woff') format('woff'),
-         url('../font/Roboto-ThinItalic-webfont.ttf') format('truetype'),
-         url('../font/Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'Roboto-Medium';
     src: url('../font/Roboto-Medium-webfont.eot');
     src: url('../font/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
